# tierroute

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.ko.md  README.md  SBOM.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.md
.github/workflows/: ci.yml
docs/: ai-assistance-audit.md  dependency-license-audit.md  evaluation-scope.md  lambda-tuning.md  literature-and-novelty.md  maintainer-explainability.ko.md  maintainer-explainability.md  native-prepared-session-protocol.md  native-ridge-portability.md  native-ridge-protocol.md  prepared-all-domain-artifact.md  prepared-feature-store.md  prepared-reference-execution.md  prepared-reference-pipeline.md  prepared-session-graph.md  replay-json.md  submission-report-outline.md
native/: tierroute_prepared.c  tierroute_ridge.c
scripts/: audit_native_binary.py  build_native_prepared.py  build_native_ridge.py  check_licenses.py  check_spdx.py  download_routerbench.py  smoke.py  training_smoke.py  validate_routerbench.py
src/tierroute/: __init__.py  __main__.py  cli.py  demo.py  showcase.py
src/tierroute/adapters/: __init__.py  budgets.py  json_dataset.py  resource_limits.py  routerbench.py
src/tierroute/core/: __init__.py  atomic_io.py  costs.py  integer_text.py  router.py  schemas.py
src/tierroute/data/: __init__.py  synthetic.json  synthetic.json.license
src/tierroute/eval/: __init__.py  budgets.py  metrics.py  planning.py  protocols.py  provenance.py  schemas.py  simulator.py  validation.py
src/tierroute/features/: __init__.py  embeddings.py  encoding.py  surface.py
src/tierroute/policies/: __init__.py  baseline_evaluation.py  baselines.py  benchmark.py  lambda_artifacts.py  lambda_threshold.py  lambda_tuning.py  native_prepared_benchmark.py  predictor_comparison.py  prepared_reference.py  resource_limits.py
src/tierroute/predictors/: __init__.py  _ridge.py  _targets.py  artifacts.py  base.py  calibration.py  gbm.py  gbm_artifacts.py  gbm_training.py  native_prepared.py  native_ridge.py  prepared_artifacts.py  prepared_assembly.py  prepared_execution.py  prepared_files.py  prepared_graph.py  prepared_store.py  resource_limits.py  solvers.py  training.py
tests/: test_atomic_io.py  test_baseline_evaluation.py  test_benchmark.py  test_bilinear_training.py  test_budgets.py  test_cli.py  test_core.py  test_eval_provenance.py  test_eval_schemas.py  test_feature_encoding.py  test_features_predictors.py  test_gbm_artifact_hardening.py  test_gbm_artifacts.py  test_gbm_core.py  test_gbm_training.py  test_integer_text.py  test_json_dataset.py  test_lambda_policy_artifacts.py  test_lambda_tuning.py  test_license_gate.py  test_metrics.py  test_native_binary_audit.py  test_native_prepared.py  test_native_prepared_benchmark.py  test_native_ridge.py  test_offline_runtime.py  test_package.py  test_policies.py  test_predictor_artifacts.py  test_predictor_comparison.py  test_predictor_comparison_cli.py  test_prepared_artifact_hardening.py  test_prepared_artifacts.py  test_prepared_assembly.py  test_prepared_assembly_hardening.py  test_prepared_assembly_numerics.py  test_prepared_execution.py  test_prepared_files.py  test_prepared_graph.py  test_prepared_reference_pipeline.py  (+8 more)
