# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["flit_core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = "tierroute"
version = "0.1.0"
description = "Offline-first, budget-aware routing for large language models"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "tierroute contributors" }]
keywords = ["llm", "routing", "budget", "offline", "evaluation"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
tierroute = "tierroute.cli:main"

[project.optional-dependencies]
dev = [
  "pip-licenses==5.5.5",
  "pytest==8.4.2",
  "ruff==0.15.21",
]

[project.urls]
Homepage = "https://github.com/Hbin77/tierroute"
Issues = "https://github.com/Hbin77/tierroute/issues"
Repository = "https://github.com/Hbin77/tierroute"

[tool.flit.sdist]
include = [
  ".github/",
  ".gitignore",
  "CHANGELOG.md",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "Makefile",
  "README.ko.md",
  "SBOM.md",
  "SECURITY.md",
  "docs/",
  "requirements-dev.lock",
  "scripts/",
  "tests/",
]
exclude = ["**/__pycache__/**", "**/*.pyc"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]
